[gd_scene format=3 uid="uid://d15qeu4s4bgjk"]

[ext_resource type="Script" uid="uid://brlkkuu3xnw88" path="res://entities/game/tutorial_window/scripts/TutorialWindow.gd" id="1_rm1ic"]
[ext_resource type="StyleBox" uid="uid://d1rhal5rp1608" path="res://assets/styles/panel/MetalBox.tres" id="2_a5yjs"]
[ext_resource type="PackedScene" uid="uid://bi2oaoxrcmttm" path="res://entities/game/animated_rich_text/scenes/AnimatedRichText.tscn" id="3_pqrdi"]
[ext_resource type="Script" uid="uid://detl5lffpj6ry" path="res://shared/entities/clickable_toggle/scripts/ClickableToggle.gd" id="4_kdust"]
[ext_resource type="Texture2D" uid="uid://dqv4i4y66gem" path="res://assets/icons/OkIcon.tres" id="7_ky4hq"]
[ext_resource type="Script" uid="uid://chfatpxf8ucxr" path="res://shared/entities/clickable_button/ClickableButton.gd" id="7_scsgn"]

[node name="TutorialWindow" type="CenterContainer" unique_id=949378526]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rm1ic")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1450775532]
custom_minimum_size = Vector2(800, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=1754395877]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=1410163732]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=899617021]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "TITLE"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=147839046]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_a5yjs")

[node name="AnimatedRichText" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer" unique_id=873433623 instance=ExtResource("3_pqrdi")]
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1075425415]
layout_mode = 2

[node name="CompleteTutorial" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/Controls" unique_id=147197161]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "COMPLETE_TUTORIAL_TOOLTIP"
text = "COMPLETE_TUTORIAL"
script = ExtResource("4_kdust")

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Controls" unique_id=2097027986]
layout_mode = 2
size_flags_horizontal = 10
text = "OK"
icon = ExtResource("7_ky4hq")
script = ExtResource("7_scsgn")

[connection signal="append_text" from="." to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/AnimatedRichText" method="add_new_text"]
[connection signal="title_changed" from="." to="PanelContainer/MarginContainer/VBoxContainer/Title" method="set_text"]
[connection signal="animation_done" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/AnimatedRichText" to="PanelContainer/MarginContainer/VBoxContainer/Controls/Button" method="enable_button"]
[connection signal="animation_playing" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/AnimatedRichText" to="PanelContainer/MarginContainer/VBoxContainer/Controls/Button" method="disable_button"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/Controls/CompleteTutorial" to="." method="toggle_abort_tutorial"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Controls/Button" to="." method="close"]
